--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ examples/using_union_messages/decode
 examples/using_union_messages/encode
 generator/nanopb_pb2.pyc
 !generator-bin/**/*
+.vscode/**
+**/bazel-*/**
