--- a/examples/bazel_simple/WORKSPACE
+++ b/examples/bazel_simple/WORKSPACE
@@ -46,8 +46,13 @@ load("@protobuf_py_deps//:requirements.bzl", protobuf_pip_install = "pip_install
 
 protobuf_pip_install()
 
-git_repository(
+"""git_repository(
     name = "com_github_nanopb_nanopb",
-    commit = "55128fe941c02824cd76ec953e429bc321c6ff43",
+    commit = "2b41aa7983b0b829d5533ad3b582c61ff5fcf89c",
     remote = "https://github.com/silvergasp/nanopb.git",
+)"""
+
+local_repository(
+    name = "com_github_nanopb_nanopb",
+    path = "../..",
 )
