--- a/generator/proto/BUILD
+++ b/generator/proto/BUILD
@@ -1,17 +1,18 @@
-load("@build_stack_rules_proto//python:python_proto_library.bzl", "python_proto_library")
+load("@rules_proto_grpc//python:defs.bzl", "python_proto_library")
 
 proto_library(
     name = "nanopb_proto",
     srcs = [
         "nanopb.proto",
     ],
+    visibility = ["//visibility:public"],
     deps = ["@com_google_protobuf//:descriptor_proto"],
 )
 
 python_proto_library(
     name = "proto_lib_python",
+    protos = [":nanopb_proto"],
     transitive = True,
-    deps = [":nanopb_proto"],
 )
 
 py_library(
